# controlloid-server

./: README.md  start.py
linux/: ws_handler.py
src/linux/: CMakeLists.txt  deploy.sh  main.c
src/windows/: CMakeLists.txt  deploy.sh  main.c
src/windows/vjoy/inc/vjoy/: interface.h  public.h
